# agentstreams

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  REVIEW.md  backlog.json  docs-index.txt  mythos-system-card.txt  pyproject.toml  skills-lock.json
.cache/pdf/: opus-4-6-system-card.txt  sonnet-4-6-system-card.txt
.claude/: settings.json
.claude/agents/: agent-architect.md  alignment-auditor.md  apollo-agent.md  architecture-reviewer.md  bio-research-agent.md  bloom-manager.md  brand-voice-agent.md  browser-automation.md  code-generator.md  common-room-agent.md  compliance-reviewer.md  coordinator.md  cowork-plugin-agent.md  crawl-analyzer.md  customer-support-agent.md  data-analyst.md  data-optimizer.md  default-agent.md  design-agent.md  engineering-agent.md  enterprise-search-agent.md  eval-builder.md  explore.md  feature-developer.md  finance-agent.md  frontend-evaluator.md  frontend-generator.md  graphql-typescript-agent.md  harmlessness-screen.md  hr-agent.md  marketing-agent.md  memory-validator.md  operations-agent.md  partner-built-agent.md  pdf-viewer-agent.md  proactive.md  product-management-agent.md  productivity-agent.md  prompt-hardener.md  sales-agent.md  (+11 more)
.claude/commands/: checkpoint.md  costs.md  remote.md  review.md  schedule.md  style.md
.claude/handover/: 2026-04-09-cloudflare-deploy.md
.claude/hooks/: session-start.sh
.claude/sessions/: postgres-viz-research.md
.claude/skills/: api-client.md  auto-mode-critique.md  away-summary.md  crawl-ingest.md  data-pipeline.md  frontend-design.md  huggingface-jobs  huggingface-llm-trainer  huggingface-trackio  prompt-suggest.md  remember.md  review-consistency.md  review-security.md  simplify-review.md  skillify.md  stuck-diagnostic.md  update-config.md
.claude/subagents/: crawl-orchestrator.md  dspy-classifier.md  entity-validator.md  frontend-design.md  neon-writer.md  opus-orchestrator.md  uda-crawler.md  uda-extractor.md  uda-projector.md  uda-thinker.md
.githooks/: post-checkout
.github/: BRANCH_PROTECTION.md  fp-filtering.txt  pull_request_template.md  security-instructions.txt
.github/workflows/: agent-boundary-check.yml  claude-interactive.yml  claude-review.yml  deploy-webapp.yml  (+5 more)
art/: 00-orchestrator-overview.txt  01-mempalace-wings.txt  02-cicd-layers.txt  03-safety-research-map.txt  04-sdk-ecosystem.txt  05-webapp-design-system.txt  06-github-workflows.txt  07-managed-agents-architecture.txt  08-managed-harness-bridge.txt  09-managed-agents-evals.txt  10-knowledge-work-agents.txt  11-knowledge-work-two-layers.txt  12-vendored-plugin-repos.txt  13-plugin-bridge-flow.txt  14-skill-catalog-map.txt  15-data-strategy-integration.txt  16-mcp-connector-map.txt  17-agent-sdk-v2-sessions.txt
atlas-chart/: README.md  build.gradle.kts  render-charts.sh  settings.gradle.kts
diagrams/: README.md  generate_human.py
docs/: dbeaver-setup.md  gate-performance.md  postgres-viz-research.md
julia/: CODE_REVIEW.md  package-lock.json  package.json  schema.sql  tsconfig.json
mcp-server/: README.md  package-lock.json  package.json
ontology/: README.md  agentstreams.ttl  kimball_dimensions.sql  mappings.ttl  schema.sql
prompts/: kelsey-piper-geoguessr.md  v1-o3-original.md  v2-opus-4-6.md  v3-mythos.md
scripts/: apply_prompts.py  convert-taxonomy.py  crawl-llms-txt.py  crawl-sitemap.py  crawl_changelog.py  deploy-knowledge-agents.py  extract-patterns.py  generate-backlog.py  generate-subagents.py  generate-timeseries.py  ingest-legalbench.py  ingest-lexglue.py  legalbench_metrics.py  legalbench_tasks.json  lexglue_metrics.py  neon-http-upsert.py  neon-team-setup.sh  pdf-read.py  prompt_registry.py  refresh-charts.sh  render_prompts.py  run-codegen-eval.py  run-legalbench-eval.py  run-lexglue-eval.py  run-pipeline.py  security-audit.py  setup-env.sh  setup-session.sh  spiders.py  validate-memory.py  validate-ontology.py  validate-patterns.py  validate-skills.py
semantics/: crawl_events.yaml
src/: __init__.py  agent_tasks.py  agent_teams.py  api.py  bloom.py  channels.py  cli.py  context_budget.py  cost_tracker.py  crawlers.py  cube_models.py  dspy_prompts.py  embeddings.py  graphql_toolkit.py  harness.py  headless.py  hooks.py  knowledge_agents.py  knowledge_subagents.py  managed_agents.py  managed_harness.py  mcp_tools.py  models.py  neon_db.py  observability.py  orchestrator.py  output_styles.py  plugin_bridge.py  projections.py  scheduled.py  sdk_models.py  sessions.py  structured_output.py  tool_search.py  tracing.py  tui.py  typescript_codegen.py
taxonomy/: 004-btw-slim.md  asc11-com-full.md  claude-api.md  code-claude-com.md  kimball-ch01-02.md  kimball-ch03-04.md  kimball-ch05-07.md  kimball-ch08-10.md  kimball-ch11-14.md  kimball-ch15-16.md  kimball-ch17-18.md  kimball-ch19-21.md  kimball-dw-toolkit.md  live-sources-btw.md  live-sources.md  modelcontextprotocol-io.md  motion-dev-full.md  neon-com.md  platform-claude-com.md  skill-creator-guide.md  skills-sh.md  sources.md  www-cdn-anthropic-com-8b8380204f74670be75e81c820ca8dda846ab289-pdf-55b596ac.md
tests/: test_agent_tasks.py  test_api.py  test_bloom.py  test_bloom_filter.py  test_casehold_eval.py  test_convert_taxonomy.py  test_convert_taxonomy_pdf.py  test_crawl_changelog.py  test_crawl_llms_txt.py  test_crawl_sitemap.py  test_crawl_sitemap_async.py  test_crawlers_uda.py  test_cross_script_integration.py  test_cube_models.py  test_dspy_prompts.py  test_embeddings.py  test_error_recovery.py  test_eval_provider.py  test_extract_patterns.py  test_generate_timeseries.py  test_generate_videos.py  test_graphql_toolkit.py  test_harness.py  test_injection_fixtures.py  test_knowledge_agents.py  test_knowledge_subagents.py  test_legalbench_eval.py  test_lexglue_eval.py  test_managed_agents.py  test_managed_agents_evals.py  test_mcp_tools.py  test_orchestrator.py  test_pipeline_integration.py  test_plugin_bridge.py  test_projections.py  test_render_prompts.py  test_run_pipeline.py  test_schema_registry.py  test_security_audit.py  test_security_audit_directory.py  (+8 more)
webapp/: package-lock.json  package.json
(+349 files in other folders)
