[project]
name = "agentstreams"
version = "0.2.0"
description = "Multi-language skill system for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "aiodns>=4.0.0",
    "aiohttp>=3.10",
    "anthropic>=0.42",
    "httpx>=0.28.1",
    "mcp>=1.0",
    "psycopg[binary]>=3.2",
    "pymupdf>=1.27.2.2",
]

[project.optional-dependencies]
vector = [
    "lancedb>=0.6",
    "pyarrow>=15.0",
]
otel = [
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp>=1.29",
]
safety = [
    # Alignment auditing: autonomous hypothesis exploration against target models
    "petri @ git+https://github.com/safety-research/petri",
    # Behavioral evaluations: generate eval suites probing sycophancy, bias, etc.
    "bloom @ git+https://github.com/safety-research/bloom",
    # Note: safety-tooling is a transitive dep of petri/bloom. Not listed
    # directly due to pytest-asyncio pin conflict.
    # lie-detector (github.com/safety-research/lie-detector) is not pip-installable;
    # referenced as methodology context in agent prompts only.
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "aioresponses>=0.7",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM102", "SIM108"]  # line length; keep explicit if/else for readability

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", ".", "src"]
asyncio_mode = "auto"
