[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentstreams"
version = "0.3.0"
description = "Safety-grounded multi-agent orchestration for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "aiodns>=4.0.0",
    "aiohttp>=3.10",
    "anthropic>=0.42",
    "fastapi>=0.115",
    "httpx>=0.28.1",
    "mcp>=1.0",
    "psycopg[binary]>=3.2",
    "pymupdf>=1.27.2.2",
    "pyyaml>=6.0",
    "rich>=14.3.3",
    "textual>=3.0",
    "trogon>=0.6",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
agentstreams = "src.cli:main"

[project.optional-dependencies]
vector = [
    "lancedb>=0.6",
    "pyarrow>=15.0",
]
otel = [
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp>=1.29",
]
safety = [
    # Alignment auditing: autonomous hypothesis exploration against target models
    "petri @ git+https://github.com/safety-research/petri",
    # Behavioral evaluations: generate eval suites probing sycophancy, bias, etc.
    "bloom @ git+https://github.com/safety-research/bloom",
    # Note: safety-tooling is a transitive dep of petri/bloom. Not listed
    # directly due to pytest-asyncio pin conflict.
    # lie-detector (github.com/safety-research/lie-detector) is not pip-installable;
    # referenced as methodology context in agent prompts only.
]
lexglue = [
    "datasets>=3.0",    # HuggingFace datasets for lex_glue benchmark (matches eval group)
]
casehold = [
    "huggingface_hub>=0.20",  # CaseHOLD CSV download via hf_hub_download
]
# Note: harlequin[postgres] is used via `uv tool run` (make sql), not as a
# project dependency, because it pins textual==0.89.1 which conflicts with
# textual>=3.0 used by the TUI dashboard.

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "aioresponses>=0.7",
    "ruff>=0.9",
]
diagrams = [
    "diagrams>=0.25.1",
]
eval = [
    "deepeval>=3.9.6",
    "promptfoo>=0.1.4",
    "pyright>=1.1.408",
    "ruff>=0.15.8",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM102", "SIM108", "B008"]  # line length; keep explicit if/else; typer uses function calls in defaults by design

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", ".", "src"]
asyncio_mode = "auto"
